# break-even-volatility

./: .gitignore  CMakeLists.txt  GOOG.csv  LICENCE  README.md  bev.cpp  bev.h  bev_class_testing.cpp  bev_testing.cpp  lambda_tests.cpp  learnings.txt  main.cpp  sampledata.csv  utils.cpp  utils.h
bev/: CMakeLists.txt  bev.cpp  bev.h
bev/utils/: CMakeLists.txt  utils.cpp  utils.h
examples/: CMakeLists.txt  Eigen_cumsum.cpp  Eigen_cumsum_array.cpp  Eigen_example_01.cpp  Eigen_example_02.cpp  Eigen_example_03.cpp  csv_tests.cpp  example.csv  example1_GBMdata.cpp  example_commas_nodates.csv  example_investigating_pnls.cpp  example_nodates.csv  lambda_tests.cpp  partial_sum_test.cpp  simulate_gbm.cpp  simulate_gbm_array.cpp  simulate_gbm_to_csv.cpp  simulate_normal_rvs.cpp  simulate_random_numbers.cpp
examples/Plot testing/: gnuplot_test.cpp
